objects/Campaign_Email_Content__c.object
<CustomObject>
    <fields>
        <fullName>Active_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as a flag to let Marketing Cloud know whether to use the content or not</description>
        <inlineHelpText>Flag to know the status to use the content or not</inlineHelpText>
        <label>Active Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <description>This is dependent pick list controlled by Campaign Target field</description>
        <inlineHelpText>This is dependent pick list controlled by Campaign Target field</inlineHelpText>
        <label>Audience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>COO</fullName>
                </value>
                <value>
                    <fullName>Lawyers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Cadence__c</fullName>
        <description>Captures the information about the cadence of the campaign for which dynamic content is generated</description>
        <inlineHelpText>Captures the information about the cadence of the campaign for which dynamic content is generated</inlineHelpText>
        <label>Campaign Cadence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Touch</fullName>
                </value>
                <value>
                    <fullName>2 Touch</fullName>
                </value>
                <value>
                    <fullName>3 Touch</fullName>
                </value>
                <value>
                    <fullName>4 Touch</fullName>
                </value>
                <value>
                    <fullName>5 Touch</fullName>
                </value>
                <value>
                    <fullName>6 Touch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Field captures the name of the campaign to which this dynamic content is related to.</description>
        <inlineHelpText>Field captures the name of the campaign to which this dynamic content is related to.</inlineHelpText>
        <label>Campaign Name</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Email Contents</relationshipLabel>
        <relationshipName>Campaign_Email_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Target__c</fullName>
        <description>This fields captures the target for the Campaign, to know whether the Campaign is specifically focused for Industry or for a Persona</description>
        <inlineHelpText>This fields captures the target for the Campaign, to know whether the Campaign is specifically focused for Industry or for a Persona</inlineHelpText>
        <label>Campaign Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>Persona</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to acknowledge whether the content is synced at the Marketing Cloud end</description>
        <inlineHelpText>Flag to acknowledge whether the content is synced at the Marketing Cloud end</inlineHelpText>
        <label>Content Synced?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Email_Template__c</fullName>
        <description>Captures the name of the default email template for which the content is updated or edited by the Sales Users.</description>
        <inlineHelpText>Captures the name of the default email template for which the content is updated or edited by the Sales Users.</inlineHelpText>
        <label>Default Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dynamic_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is checked when email template get edited</description>
        <label>Dynamic Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dynamic_Email_Content__c</fullName>
        <description>Captures all the edited contents by the Sales User, for the Leads or Contacts</description>
        <inlineHelpText>Captures all the edited contents by the Sales User, for the Leads or Contacts</inlineHelpText>
        <label>Dynamic Email Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Parent_Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Parent Campaign, the top in the hierarchy of the campaign</description>
        <inlineHelpText>Parent Campaign, the top in the hierarchy of the campaign</inlineHelpText>
        <label>Parent Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Email Contents (Parent Campaign)</relationshipLabel>
        <relationshipName>Campaign_Email_Contents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who has edited the content of the email for the lead or contact</description>
        <inlineHelpText>User who has edited the content of the email for the lead or contact</inlineHelpText>
        <label>Sales User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Email_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Save_As__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked only if email content name is changed by user manually</description>
        <inlineHelpText>This field is checked only if email content name is changed by user manually</inlineHelpText>
        <label>Save As</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Determines what is the sequence of this email need to be sent to the Journeys</description>
        <inlineHelpText>Determines what is the sequence of this email need to be sent to the Journeys</inlineHelpText>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_Line__c</fullName>
        <description>Subject of email template</description>
        <inlineHelpText>Subject of email template</inlineHelpText>
        <label>Subject Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <description>This field is used to make sure that only unique dynamic content is available for the same type of Email from the Sales User for a Campaign</description>
        <inlineHelpText>This field is used to make sure that only unique dynamic content is available for the same type of Email from the Sales User for a Campaign</inlineHelpText>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>This object will capture all the information about the Outbound Campaigns and Events. Also stores all the dynamic content that Sales User will produce for sending it out to the end user.</description>
    <label>Campaign Email Content</label>
    <nameField>
        <label>Campaign Email Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Email Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>